--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "pinia": "^2.0.17",
+    "primeicons": "^5.0.0",
+    "primevue": "^3.17.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
   },
